refactor: remove unused modules and configuration files
- Remove `Blockable` interface from core module
- Delete `ConfigService` class and related paths in ui module
- Remove dependency-reduced-pom.xml from ui module
- Cleanup redundant classes, resources, and FXML files for improved maintainability.
- Simplify project by removing legacy support for mod configuration and multilingual features.

- Now the application launches correctly when you run the ui module and the jar is executable when you build the module.