@@ -1,27 +1,31 @@
 package com.github.argon.moduploader.cli.command.modio;
 
-import com.codedisaster.steamworks.SteamRemoteStorage;
+import com.github.argon.moduploader.core.auth.BearerToken;
+import com.github.argon.moduploader.core.vendor.VendorException;
+import com.github.argon.moduploader.core.vendor.modio.Modio;
+import com.github.argon.moduploader.core.vendor.modio.model.ModioCommunityOptions;
+import com.github.argon.moduploader.core.vendor.modio.model.ModioCreditOptions;
+import com.github.argon.moduploader.core.vendor.modio.model.ModioMaturityOptions;
+import com.github.argon.moduploader.core.vendor.modio.model.ModioVisibility;
+import com.github.argon.moduploader.core.vendor.modio.model.ModioMod;
+import jakarta.inject.Inject;
 import picocli.CommandLine;
 
 import java.nio.file.Path;
-import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.Callable;
 
 @CommandLine.Command(name = "upload", description = "Upload a mod to mod.io")
-public class ModioUploadCommand implements Runnable {
+public class ModioUploadCommand implements Callable<Integer> {
+    @CommandLine.ParentCommand
+    ModioCommand parentCommand;
 
-    // TODO make this global for all modio commands
-    @CommandLine.Option(names = {"-key", "--api-key"}, required = true,
-        description = "The mod.io api access key. You can create a key in your mod.io profile")
-    String apiKey;
+    @Inject Modio modio;
+    @Inject ModioLoginCommand loginCommand;
 
-    @CommandLine.Option(names = {"-app", "--app-id"}, defaultValue = "480",
-        description = "The Steam app id of the game you want to upload a mod to.")
-    Integer appId;
-
-    @CommandLine.Option(names = {"-id", "--published-file-id"},
-        description = "Identifies the mod in the Steam Workshop. Will create a new mod when empty or update a mod with the given id.")
-    Long publishedFileId;
+    @CommandLine.Option(names = {"-id", "--mod-id"},
+        description = "Identifies the mod in mod.io. Will create a new mod when empty or update a mod with the given id.")
+    Long modId;
 
     @CommandLine.Option(names = {"-n", "--name"}, required = true,
         description = "Title of your mod.")
@@ -31,28 +35,70 @@ public class ModioUploadCommand implements Runnable {
         description = "Your mod description.")
     String description;
 
+    @CommandLine.Option(names = {"-sum", "--summary"}, required = true,
+        description = "A short description.")
+    String summary;
+
+    @CommandLine.Option(names = {"-ver", "--version"},
+        description = "Version of the file release (recommended format 1.0.0 - MAJOR.MINOR.PATCH).")
+    String version;
+
     @CommandLine.Option(names = {"-cl", "--changelog"},
         description = "When updating a mod, you can leave patch notes.")
     String changelog;
 
     @CommandLine.Option(names = {"-vis", "--visibility"},
         description = "Influences who can see your mod")
-    SteamRemoteStorage.PublishedFileVisibility visibility;
+    ModioVisibility visibility;
 
     @CommandLine.Option(names = {"-cf", "--content-folder"}, required = true,
         description = "The folder with your mod files to upload.")
     Path contentFolder;
 
-    @CommandLine.Option(names = {"-img", "--image"}, required = true,
+    @CommandLine.Option(names = {"-i", "--image"}, required = true,
         description = "The thumbnail and preview image of the mod.")
-    Path previewImage;
+    Path logo;
 
-    @CommandLine.Option(names = {"-t", "--tags"},
+    @CommandLine.Option(names = {"-t", "--tags"}, split = ",",
         description = "A list of tags to help users finding your mod.")
-    List<String> tags = Collections.emptyList();
+    List<String> tags = List.of();
 
     @Override
-    public void run() {
-       // TODO implement
+    public Integer call() {
+        BearerToken bearerToken = modio.authService().getBearerToken();
+
+        // force login
+        while (bearerToken == null || bearerToken.isExpired()) {
+            new CommandLine(loginCommand).execute( "-e");
+            bearerToken = modio.authService().getBearerToken();
+        }
+
+        ModioMod.Local mod = new ModioMod.Local(
+            modId,
+            name,
+            null,
+            summary,
+            description,
+            logo,
+            contentFolder,
+            null,
+            visibility,
+            ModioMaturityOptions.NONE,
+            ModioCreditOptions.NONE,
+            ModioCommunityOptions.ALL,
+            null,
+            null,
+            tags
+        );
+
+        try {
+            Long gameId = parentCommand.gameId;
+            ModioMod.Remote remote = modio.upload(gameId, mod, version, changelog);
+            System.out.println(remote.id());
+        } catch (VendorException e) {
+            throw new RuntimeException(e);
+        }
+
+        return 0;
     }
 }
